# rf-filter-calculator

./: README.md  filter-calc.py  pyproject.toml  requirements.txt
docs/: README.md  caveats-and-known-issues.md  code-standards.md  codebase-summary.md  filter-theory.md  project-overview-pdr.md  quick-start.md  sample-output.md  system-architecture.md  testing.md  tips-and-best-practices.md  user-guide.md
documentation/: README.md  quick-start.md  sample-output.md  tips-and-best-practices.md  user-guide.md
filter_lib/: __init__.py
filter_lib/bandpass/: __init__.py  calculations.py  diagrams.py  display.py  formatters.py  g_values.py  transfer.py
filter_lib/cli/: __init__.py  bandpass_cmd.py  highpass_cmd.py  lowpass_cmd.py  wizard_cmd.py
filter_lib/highpass/: __init__.py  calculations.py  display.py  transfer.py
filter_lib/lowpass/: __init__.py  calculations.py  display.py  transfer.py
filter_lib/shared/: __init__.py  chebyshev_g_calculator.py  cli_aliases.py  cli_helpers.py  constants.py  display_common.py  display_helpers.py  eseries.py  filter_result.py  formatting.py  parsing.py  plotting.py  topology_diagrams.py  transfer_functions.py
filter_lib/wizard/: __init__.py  bandpass_wizard.py  filter_wizard.py  interactive.py  prompts.py
tests/: __init__.py  test_bandpass_calculations.py  test_bandpass_modules.py  test_chebyshev_calculator.py  test_cli_and_helpers.py  test_display_modules.py  test_eseries_matching.py  test_highpass_calculations.py  test_lowpass_calculations.py  test_parsing_validation.py  test_topology_calculations.py  test_transfer_functions.py
